# qtemu

./: CHANGELOG  CMakeLists.txt  README  TODO  config.h  configevent.cpp  configevent.h  configwindow.cpp  configwindow.h  controlpanel.cpp  controlpanel.h  floatingtoolbar.cpp  floatingtoolbar.h  guesttoolslistener.cpp  guesttoolslistener.h  halobject.cpp  halobject.h  harddiskmanager.cpp  harddiskmanager.h  helpwindow.cpp  helpwindow.h  interfacemodel.cpp  interfacemodel.h  machineconfig.cpp  machineconfig.h  machineconfigobject.cpp  machineconfigobject.h  machineprocess.cpp  machineprocess.h  machinescrollarea.cpp  machinescrollarea.h  machinesplash.cpp  machinesplash.h  machinetab.cpp  machinetab.h  machineview.cpp  machineview.h  machinewizard.cpp  machinewizard.h  main.cpp  (+27 more)
GuestTools/: GuestTools.pro  guesttools.cpp  guesttools.h  guesttools.ui  main.cpp
GuestTools/modules/: clipboardsync.cpp  clipboardsync.h  guest.pri  guestmodule.cpp  guestmodule.h  host.pri
GuestTools/modules/clipboard/: clipboardpoll.cpp  clipboardpoll.h  clipboardsync.cpp  clipboardsync.h  guest.pri  host.pri
GuestTools/qextserialport/: posix_qextserialport.cpp  posix_qextserialport.h  qextserialbase.cpp  qextserialbase.h  qextserialenumerator.cpp  qextserialport.cpp  qextserialport.h  qextserialport.pro  win_qextserialport.cpp  win_qextserialport.h
GuestTools/resources/: resources.qrc
help/: main.htm
help/de/: main.htm
help/dynamic/: cpu-memory.html  display.html  harddisk.html  networking.html  removablemedia.html  sound.html  usb.html
images/crystal/: LICENSE
images/oxygen/: COPYING
misc/: qtemu.desktop
misc/setup_win32/: header.xcf  qtemu.exe.manifest  qtemu.nsi  welcome.xcf
translations/: qtemu_cz.ts  qtemu_de.ts  qtemu_es.ts  qtemu_fr.ts  qtemu_it.ts  qtemu_pl.ts  qtemu_pt-BR.ts  qtemu_ru.ts  qtemu_tr.ts  template_qtemu.ts
ui/: controlpanel.ui  networkpage.ui  settingstab.ui  ui_settingstab.h
vnc/: .directory  remoteview.cpp  remoteview.h  vnc.pro  vncclientthread.cpp  vncclientthread.h  vncview.cpp  vncview.h
